# milky-chat

./: pyproject.toml
src/: app.py  dependencies.py  lifespan.py  settings.py
src/controllers/: __init__.py  auth.py  category.py  chat.py  socket.py  user.py
src/models/: __init__.py  db.py
src/models/schemas/: __init__.py  category.py  channel.py  chat.py  user.py
src/models/tables/: __init__.py  category.py  channel.py  chat.py  message.py  role.py  user.py
src/service/: auth.py  category.py  chat.py  user.py
src/service/sockets/: __init__.py  base.py  chat.py
src/utils/: password_hasher.py  validator.py
src/views/: __init__.py  auth.py
