[tool.poetry]
name = "milky-chat"
version = "0.1.0"
description = ""
authors = ["Skader-Cat <Skader-kot@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
np = "^1.0.2"
numpy = "^1.26.2"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
